--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,9 @@
 [versions]
 agp = "8.5.2"
 androidMail = "1.6.7"
+anychartAndroid = "1.1.5"
 checkout = "1.6.40"
+commonsIo = "2.13.0"
 fragmentKtxVersion = "1.6.0"
 glide = "4.16.0"
 googleAuthLibraryOauth2Http = "1.15.0"
@@ -18,6 +20,7 @@ material = "1.12.0"
 constraintlayout = "2.1.4"
 lifecycleLivedataKtx = "2.8.4"
 lifecycleViewmodelKtx = "2.8.4"
+multidex = "1.0.3' "
 navigationFragmentKtx = "2.7.7"
 navigationFragmentKtxVersion = "2.7.0"
 navigationUiKtx = "2.7.7"
@@ -51,7 +54,9 @@ androidx-navigation-ui-ktx-v270 = { module = "androidx.navigation:navigation-ui-
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+anychart-android = { module = "com.github.AnyChart:AnyChart-Android", version.ref = "anychartAndroid" }
 checkout = { module = "com.razorpay:checkout", version.ref = "checkout" }
+commons-io = { module = "commons-io:commons-io", version.ref = "commonsIo" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 google-auth-library-oauth2-http = { module = "com.google.auth:google-auth-library-oauth2-http", version.ref = "googleAuthLibraryOauth2Http" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
@@ -79,6 +84,7 @@ androidx-legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
 firebase-messaging-ktx = { group = "com.google.firebase", name = "firebase-messaging-ktx", version.ref = "firebaseMessagingKtx" }
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
+multidex = { module = "'com. android. support:multidex", version.ref = "multidex" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 pinview = { module = "io.github.chaosleung:pinview", version.ref = "pinview" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
