--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,5 @@ local.properties
 /app/src/main/res/raw/messease.json
 /app/src/google-services.json
 # Ignore IntelliJ IDEA project files
-.idea/
+.idea
 *.iml
